# in-place-init

./: Cargo.toml  README.md
in-place-init/: Cargo.toml
in-place-init-derive/: Cargo.toml
in-place-init-derive/src/: lib.rs
in-place-init/examples/: main.rs  short-buffer.rs
in-place-init/src/: lib.rs  main.rs  util.rs
in-place-init/src/allocation/: boxed.rs  mod.rs  rc.rs  string.rs  vec.rs
in-place-init/src/combinators/: as_bytes.rs  as_utf8.rs  assert_pinned.rs  chain.rs  fail.rs  flatten.rs  for_each.rs  for_each_with.rs  for_slice.rs  for_type.rs  ignore_extra.rs  map_err.rs  map_extra.rs  mod.rs  repeat.rs  succeed.rs  then.rs  then_pinned.rs  try_with.rs  uninit.rs  unsize.rs  with.rs  with_extra.rs  zeroed.rs
src/: lib.rs  main.rs
src/allocation/: boxed.rs  mod.rs  rc.rs  string.rs  vec.rs
src/combinators/: array_for_each.rs  array_for_each_with.rs  assert_pinned.rs  chain.rs  fail.rs  for_each_with.rs  for_slice.rs  for_type.rs  ignore_extra.rs  map_err.rs  map_extra.rs  mod.rs  repeat.rs  slice_for_each.rs  slice_for_each_with.rs  succeed.rs  try_with.rs  uninit.rs  with.rs  with_extra.rs  zeroed.rs
